--- a/QuizMusic/css/main.css
+++ b/QuizMusic/css/main.css
@@ -1,4 +1,3 @@
-
 section{
     background: lightsalmon;
     border: black solid;
@@ -6,8 +5,6 @@ section{
     height: 2160px;
     text-align: center;
     position: relative;
-    display: block;
-   
 }
 
 h1{
@@ -19,6 +16,15 @@ html, body, div, p, h2, a, ul, li, img {
     margin: 0px;
     padding: 0px;
     font-size: 100px; 
+}
+
+.botones{
+    position: absolute;
+    width: 500px;
+    height: 500px;
+    left: 290px;
+    top: 1460px;
+    text-align: center;
 }
 
 #home{
@@ -47,3 +53,18 @@ html, body, div, p, h2, a, ul, li, img {
     text-align: center;
     font-size: 200px;
 }
+
+button{
+    height: 120px;
+    width: 200px;
+}
+
+.circle {
+    width: 100px;
+    height: 100px;
+    background: red;
+    border-radius: 50%;
+    padding: 100px;
+    margin-top: 100px;
+    margin-left: 400px;
+  }
