--- a/QuizMusic/css/main.css
+++ b/QuizMusic/css/main.css
@@ -100,3 +100,13 @@ button{
     margin-top: 100px;
     margin-left: 400px;
   }
+
+.circle_cat{
+    width: 100px;
+    height: 100px;
+    background: red;
+    border-radius: 50%;
+    padding: 100px;
+    margin-top: 100px;
+    margin-left: 400px;
+}
