--- a/QuizMusic/css/main.css
+++ b/QuizMusic/css/main.css
@@ -43,11 +43,12 @@ html, body, div, p, h2, a, ul, li, img {
 }
 
 .botonrpta{
-    width: 80%;
-    padding-top: 0px;
-    padding-bottom: 0px;
+    width: 65%;
+    padding-top: 20px;
+    padding-bottom: 20px;
     margin-bottom: 30px;
-    font-family: arial;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 60px;
 }
 
 #logoCategorias{
