--- a/QuizMusic/css/main.css
+++ b/QuizMusic/css/main.css
@@ -187,6 +187,25 @@ button{
     margin-bottom: 100px;
 }
 
+.botonCategorias{
+    position: relative;
+    margin-top: 30px;
+    cursor: pointer;
+}
+
+#fondoAzulCat{
+    position: absolute;
+    left: 2px;
+}
+
+#estrellaPuntajeTotal{
+    position: relative;
+    z-index: 10;
+    left: auto;
+    top: 60px;
+    width: 40%;
+}
+
 #logo{
     position: absolute;
     width: 500px;
