--- a/QuizMusic/css/main.css
+++ b/QuizMusic/css/main.css
@@ -215,6 +215,7 @@ button{
 .botonCategorias{
     position: relative;
     margin-top: 30px;
+    margin-right: 50px;
     cursor: pointer;
 }
 
@@ -225,7 +226,7 @@ button{
 
 #estrellaPuntajeTotal{
     position: relative;
-    z-index: 10;
+    z-index: 1;
     left: auto;
     top: 60px;
     width: 40%;
@@ -289,4 +290,23 @@ button{
 
 .false {
     background-color: red;
+}
+
+.scores {
+    color: #2B2449;
+    position: relative;
+    display: inline-block;
+}
+
+#totalScoreStar {
+    position: relative;
+    text-align: center;
+}
+
+#totalScore {
+    position: absolute;
+    top: 62%;
+    left: 50%;
+    z-index: 10;
+    transform: translate(-50%, -50%);
 }
