Se agregaron imagenes con estrellas. Código refrescado. 7:50pm

--- a/QuizMusic/css/main.css
+++ b/QuizMusic/css/main.css
@@ -310,3 +310,11 @@ button{
     z-index: 10;
     transform: translate(-50%, -50%);
 }
+
+#timerNumb {
+    position: absolute;
+    top: 860px;
+    left: 50%;
+    z-index: 10;
+    transform: translate(-50%, -50%);
+}
