--- a/QuizMusic/css/main.css
+++ b/QuizMusic/css/main.css
@@ -1,13 +1,14 @@
 section{
     background-image: url("/img/Botones y Fondos/Asset 88.png");
     border: black solid;
-    width: 1080px;
-    height: 2160px;
+    width: 360px;
+    height: 696px;
     text-align: center;
     position: relative;    
 }
 
 h1{ 
+    /* Sin cambiar (reemplazable) ?*/
     position: absolute;
     left: 290px;
     text-align: center;
@@ -21,7 +22,8 @@ h1{
 html, body, div, p, h2, a, ul, li, img {
     margin: 0px;
     padding: 0px;
-    font-size: 100px; 
+    /* 100 to 33*/
+    font-size: 33px; 
 }
 
 .fondoUno{
@@ -35,23 +37,28 @@ z-index: 5;
 }
 
 #botonJugar{
-    left: 700px;
-    top: 1330px;
+    /* 700 to 233*/
+    left: 233px;
+    /* 1330 to 428*/
+    top: 428px;
 }
 
 #botonHome{
+    /* 100  to 32*/
     position: relative;
     left: auto;
-    top: 100px;
+    top: 32px;
 }
 
 #botonInstrucciones{
-    left: 100px;
-    top: 1330px;
+    /* 100 to 33*/
+    left: 33px;
+    /* 1330 to 428*/
+    top: 428px;
 }
 #botonCreditos{
-    left: 100px;
-    top: 1510px;
+    left: 33px;
+    top: 486px;
 }
 
 /*
@@ -75,10 +82,10 @@ z-index: 5;
 
 .botones{
     position: absolute;
-    width: 1060px;
-    height: 500px;
+    width: 353px;
+    height: 161px;
     left: 0px;
-    top: 1460px;
+    top: 470px;
     text-align: center;
     color: #2B2449;
     z-index: 2;
@@ -86,82 +93,82 @@ z-index: 5;
 
 .botones2{
     position: relative;
-    width: 1060px;
-    height: 500px;
+    width: 353px;
+    height: 161px;
     left: 0px;
-    top: 820px;
+    top: 264px;
     text-align: center;
     color: #2B2449;
 }
 
 .botonrpta{
     width: 100%;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    margin-bottom: 23px;
+    padding-top: 6.44px;
+    padding-bottom: 6.44px;
+    margin-bottom: 7.4px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     cursor: pointer;
-    font-size: 55px;
+    font-size: 17.71px;
     color: #2B2449;
 }
 
 #logoEstrella{
     position: relative;
     left: auto;
-    top: 50px;
+    top: 16px;
 }
 
 #logoCategorias{
     position: absolute;
-    width: 800px;
-    height: 800px;
-    left: 145px;
-    top: 400px;
+    width: 267px;
+    height: 258px;
+    left: 48px;
+    top: 129px;
     text-align: center;
     border-radius: 50%;
 }
 
 #interfaz{
     position: absolute;
-    left: 115px;
-    top: 400px;
+    left: 38px;
+    top: 129px;
 }
 
 #botonSig{
     position: relative;
     left: auto;
-    top: 1545px;
+    top: 497px;
 }
 
 #barrita{
     position: relative;
     left: auto;
-    top: 1530px;
+    top: 493px;
 }
 
 #bar{
     position: relative;
     left: auto;
-    top: 10px;
+    top: 3.22px;
 }
 
 .overhead {
-    margin-top: 30px;
-    margin-left: -280px;
+    margin-top: 10px;
+    margin-left: -93px;
 }
 
 .stars {
-    width: 180px;
-    height: 180px;
+    width: 60px;
+    height: 58px;
     object-position: left;
 }
 
 #next2Stars {
-    margin-left: 100px;
+    margin-left: 33px;
 }
 
 #timer {
-    margin-top: 50px;
+    margin-top: 16px;
 }
 
 button{
@@ -169,82 +176,85 @@ button{
     border-radius: 10%;
   border: none;
   color: #2B2449;
-    padding: 15px 32px;
+    padding: 5px 11px;
   text-align: center;
   text-decoration: none;
-  font-size: 100px;
+  font-size: 33px;
+  /*  4px 2px ver luego si se cambia*/
   margin: 4px 2px;
   cursor: pointer;
 }
 
 .genero1{
     text-align: justify;
-    margin-bottom: 100px;
-    left: 200px;
-    padding: 15px 32px;
+    margin-bottom: 32px;
+    left: 67px;
+
+    padding: 5px 11px;
     width: 80%;
 }
 
 #volver{
     position: relative;
-    top: 900px;
+    top: 93px;
 }
 
 #categorias{
-    margin-bottom: 200px;
-    top: 200px;
+    margin-bottom: 64px;
+    top: 64px;
 }
 
 #fondoCreditos{
     position: absolute;
-    left: 45px;
-    top: 50px;
+    left: 15px;
+    top: 16px;
     
 }
 
 #equipo{
     position: absolute;
-    top: 300px;
+    top: 97px;
 }
 
 .nombreInd{
-    margin-bottom: 100px;
+    margin-bottom: 32px;
 }
 
 .botonCategorias{
     position: relative;
-    margin-top: 30px;
-    margin-right: 50px;
+    margin-top: 10px;
+    margin-right: 17px;
     cursor: pointer;
 }
 
 #punk{
     position: relative;
-    left: -17px;
+    left: -6px;
 }
 
 #fondoAzulCat{
     position: absolute;
-    left: 2px;
+    /* left: 2px; */
+    
 }
 
 #estrellaPuntajeTotal{
     position: relative;
     z-index: 1;
     left: auto;
-    top: 60px;
+    top: 19px;
     width: 40%;
 }
 
 #logo{
     position: absolute;
-    width: 500px;
-    height: 500px;
-    left: 290px;
-    top: 780px;
+    width: 167px;
+    height: 161px;
+    left: 97px;
+    top: 251px;
     background: red;
     text-align: center;
-    font-size: 200px;
+    font-size: 67px;
 }
 
 #logoPrincipal{
@@ -256,8 +266,8 @@ button{
 
 #fondoAzul{
     position: absolute;
-    left: 2px;
-    top: 1637px;
+    /* left: 2px; */
+    top: 527px;
     z-index: 1;
 }
 
@@ -269,23 +279,23 @@ button{
 }
 
 .circle {
-    width: 100px;
-    height: 100px;
+    width: 33px;
+    height: 32px;
     background: red;
     border-radius: 50%;
-    padding: 100px;
-    margin-top: 100px;
-    margin-left: 400px;
+    padding: 33px;
+    margin-top: 32px;
+    margin-left: 133px;
   }
 
 .circle_cat{
-    width: 100px;
-    height: 100px;
+    width: 33px;
+    height: 32px;
     background: red;
     border-radius: 50%;
-    padding: 100px;
-    margin-top: 100px;
-    margin-left: 400px;
+    padding: 33px;
+    margin-top: 32px;
+    margin-left: 133px;
 }
 
 .true {
@@ -300,8 +310,8 @@ button{
     color: #2B2449;
     position: absolute;
     text-align: left;
-    top: 435px;
-    left: 910px;
+    top: 140px;
+    left: 303px;
     display: inline-block;
     
 }
@@ -312,24 +322,24 @@ button{
 
 #score0{
     position: absolute;
-    top: -15px;
-    font-size: 90px;
+    top: -5px;
+    font-size: 30px;
 }
 
 #score1{
     position: absolute;
-    top: 390px;
-    font-size: 90px;
+    top: 126px;
+    font-size: 30px;
 }
 #score2{
     position: absolute;
-    top: 720px;
-    font-size: 90px;
+    top: 232px;
+    font-size: 30px;
 }
 #score3{
     position: absolute;
-    top: 1093px;
-    font-size: 90px;
+    top: 532px;
+    font-size: 30px;
 }
 
 #totalScoreStar {
@@ -341,14 +351,14 @@ button{
     position: absolute;
     top: 62%;
     left: 50%;
-    font-size: 160px;
+    font-size: 53px;
     z-index: 10;
     transform: translate(-50%, -50%);
 }
 
 #timerNumb {
     position: absolute;
-    top: 860px;
+    top: 277px;
     left: 50%;
     z-index: 10;
     transform: translate(-50%, -50%);
@@ -358,13 +368,13 @@ button{
     position: relative;
     text-align: center;
     display: inline-block;
-    margin-bottom: 23px;
+    margin-bottom: 7px;
 }
  
 .texto-encima{
     position: absolute;
-    top: 10px;
-    left: 10px;
+    top: 3px;
+    left: 3px;
 }
 .centrado{
     position: absolute;
@@ -380,7 +390,7 @@ button{
 
 .fondoImgArtista{
     position: absolute;
-    width: 925px; 
-    height: 925px;
-    left: 88px;
+    width: 308px; 
+    height: 298px;
+    left: 29px;
 }
